feature: added thumbnailHash field to GameAsset's to reduce thumbnail requests from UI
