# src/GameDevWare.Charon.Unity/Packages/com.gamedevware.charon/Editor/Services/ResourceServerApi/OpenApi.yml
@@ -287,6 +287,10 @@ components:
                 hasThumbnail:
                     type: boolean
                     description: Whether the asset has an available thumbnail
+                thumbnailHash:
+                    type: string
+                    nullable: true
+                    description: Hash value of thumbnail. If available.
                 type:
                     type: string
                     description: Type/category of the asset
